pom angepasst; unnötiger code aus Toolbar gelöscht